--- a/server/package.json
+++ b/server/package.json
@@ -27,10 +27,13 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/serve-static": "^2.1.3",
+    "@nestjs/typeorm": "^7.1.5",
     "dotenv": "^8.2.0",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
+    "typeorm": "^0.2.29",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
