--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
       "start:client": " cd client && npm start",
       "start:server": " cd server && npm run start:dev",
       "test": "echo \"Error: no test specified\" && exit 1",
-      "install": "npm install --prefix client && npm install --prefix server"
+      "install": "npm install --prefix client && npm install --prefix server",
+      "heroku-postbuild": "cd client && npm install"
       
     }
 }
